--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -13,7 +13,7 @@
     .text_info {
         margin-top: 25%;
         text-align: center;
-        font-size: 2.5rem;
+        font-size: 30px;
         font-weight: 600;
         color: #C4F6DC;
     }
@@ -21,7 +21,7 @@
     .text_info_two {
         margin-top: 7%;
         text-align: center;
-        font-size: 2rem;
+        font-size: 25px;
         font-weight: 600;
         color: #C4F6DC;
     }
@@ -29,6 +29,7 @@
     .logo_css {
         align-items: center;
         text-align: center;
+        height: 25%;
     }
 }
 
@@ -70,6 +71,10 @@ form h2 {
 
 .input-mat {
     width: 80%;
+}
+
+.logo_css{
+    
 }
 
 mat-checkbox {
